--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -57,16 +57,16 @@ html,body {
       color: #a7a0a2;
       font-size: 16px;
       text-align: center;
-  
+      text-transform:capitalize;
     }
     .img-back {
       position: absolute;left: 0;top: 0;width: 100%;height: 100%;padding: 30px;box-sizing: border-box;text-align: center;color: #666;
       //解决safari翻转bug 加z轴平移
       transform:rotateY(180deg);
       backface-visibility: hidden;
-      background: #fff;
+      background: #f8f8f8;
       transition: transform 0.6s ease-in-out;
-      
+      text-transform:capitalize;
     }
   }   
   }
